2011-09-15  Andreas Kupries  <andreask@activestate.com>

	* tests/bitmap.test: Updated test 3.0.13 to handle platform
	  differences (word size).

	* tests/convert.test: Renamed/deleted. Added a 'topology_'
	* tests/cpu_node_set.test: prefix to clarify what section
	* tests/cpubind.test: of the API they belong to.
	* tests/membind.test:

	* tests/topology_convert.test: Renamed/Added. See above.
	* tests/topology_cpu_node_set.test:
	* tests/topology_cpubind.test:
	* tests/topology_membind.test:

2011-09-14  Andreas Kupries  <andreask@activestate.com>

	* doc/instance.inc: Extended documentation and testsuite, covering
	* tests/topology.test: instance methods 'type' and 'width'.

	* tests/topology.test: Started conversion to proper testsuite, and
	  expansion to all instance methods.

	* generic/bitmap.c: Fixed warning about possible uninitialized variable.
	* generic/hwloc.c: Added check to -set_synthetic processing to avoid
	* tests/create.test: hwloc assertion and abort on empty description.
	  Updated tests, and fixups too, files where needed (xml). Folded tests
	  of instance destruction into this file.
	* tests/destroy.test: Removed.

2011-09-13  Andreas Kupries  <andreask@activestate.com>

	* generic/hwloc.c: Fixed option processing of 'hwloc create',
	* tests/create.test: plus associated updates to the testsuite.

	* generic/hwloc.c: Updated name of the package init function,
	  forgotten yesterday.

	* generic/topology.c: Removed the name information from the
	* generic/topology.h: instance structure, not needed. Reworked the
	  topology creation command to (a) properly create a fully-
	  qualified name (FQN) for the instance, (b) check for collision
	  with existing commands, and (c) return the FQN of the instance
	  as the result of 'hwloc create'.

	* tests/create.test: Converted to proper testsuite (Draft).
	* tests/topology.test: New file, old create.test contents.
	* tests/version.test: Converted to proper testsuite.
