@@ -1,0 +1,15 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE topology SYSTEM "hwloc.dtd">
+<topology>
+  <object type="Machine" os_level="-1" os_index="0" cpuset="0x00000001" complete_cpuset="0x00000001" online_cpuset="0x00000001" allowed_cpuset="0x00000001" local_memory="793800704">
+    <page_type size="4096" count="193799"/>
+    <page_type size="4194304" count="0"/>
+    <info name="Backend" value="Linux"/>
+    <info name="OSName" value="Linux"/>
+    <info name="OSRelease" value="2.6.7"/>
+    <info name="OSVersion" value="#1 Wed September 08 20:12:03 EDT 2001"/>
+    <info name="HostName" value="some-fake-box"/>
+    <info name="Architecture" value="i686"/>
+    <object type="PU" os_level="-1" os_index="0" cpuset="0x00000001" complete_cpuset="0x00000001" online_cpuset="0x00000001" allowed_cpuset="0x00000001"/>
+  </object>
+</topology>
